test(unit): refactor, add unit tests for DataStatsMapper